Fix typo in a function exported from chrome_elf.

Only by a link.exe misfeature is the link succeeding as-is, by
producing broken binaries.

Bug: 760385
Change-Id: I3a4b809fb7f738deb4b9ca41c0a562c1735a63be
Reviewed-on: https://chromium-review.googlesource.com/646594
Reviewed-by: Nico Weber <thakis@chromium.org>
Reviewed-by: Scott Graham <scottmg@chromium.org>
Commit-Queue: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498978}