components/crash/content/app/crash_export_thunks.cc
@@ -12,7 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/crash/content/app/crashpad.h"
 #include "third_party/crashpad/crashpad/client/crashpad_client.h"
 
-void RequestSingleCrashUploadThunk(const char* local_id) {
+void RequestSingleCrashUploadImpl(const char* local_id) {
   crash_reporter::RequestSingleCrashUploadImpl(local_id);
 }
 
